# one_company_split

./: .gitignore  .iqra.md  gen_book.py  pyproject.toml  test_sync_30_tables.py  verify_both.py  工作流_模块优化_iqra核心能力Phase2.md
.iqra/: memory.json
_archive/core/: planet_painter_20260614_151048_302.py
core/: LICENSE  README.md  __init__.py  _debug_run.py  ad_launcher.py  agent_delegate.py  agent_loop.py  app_state.py  auth_service.py  backup.py  business_service.py  chat_engine.py  clarify_system.py  cloud_pull.py  cloud_sync.py  code_executor.py  code_intel.py  collaboration_client.py  config_validator.py  conflict_resolver.py  dark_tool_theme.py  data_sync.py  database.py  event_bus.py  excel_export.py  iqra_logging.py  light_tool_theme.py  llm_backend.py  machine_code.py  main.py  mic_capture  mic_capture_v4.swift  model_status.py  model_status_manager.py  module_manager.py  multi_model.py  notification_cron.py  obscura_provider.py  observability.py  operation_log.py  (+33 more)
core/_deprecated/: triple_sync.py
core/data/: base_info.json  iqra_config.json  remembered_admin.json  rollback_log.json  task_board.json
core/knowledge_base/: 277d7e45cf7b.json  2dff142a8d7b.json  39ac3748b6d0.json  3c2ff7e208b2.json  6756539de911.json  6764224d401c.json  anomaly_report_20260614_015553.json
core/modules/: ad_player.py
core/rules_project/: project_rules.md
data/: audit  audit-shm  audit-wal  operation_log  operation_log-shm  operation_log-wal  personnel_db.sqlite  sync_log  users
intelligence/: __init__.py  _ai_shared.py  _ai_widgets_business.py  _ai_widgets_core.py  _ai_widgets_visualization.py  _compat.py  _model_manager_download.py  _shell_dialogs.py  account_window.py  agent_bridge.py  agent_bridge_models.py  agent_bridge_workers.py  ai_chat_styles.py  ai_dashboard_window.py  ai_features_ai_dashboard.py  analysis_tools.py  auto_task_executor.py  backup_window.py  data_visualization.py  db_helper.py  download_dialog.py  event_trigger.py  file_rename_tools.py  finance_analysis_tools.py  floating_planet.py  floating_planet_anim_mixin.py  floating_planet_draw_mixin.py  floating_planet_menu_mixin.py  hr_tools.py  intelligence_window.py  inventory_tools.py  key_manager.py  mcp_client.py  offline_analyzer.py  password_tools.py  performance_monitor.py  quick_actions.py  rag_injector.py  recommendation_engine.py  report_generator.py  (+14 more)
management-system/: .audit_result.txt  .audit_result_20260611_222636_540.txt  .gitignore  CHANGELOG.md  rollback_control.py  同步架构分析报告.md
modules/: __init__.py
one_person_company.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
solar_explorer/: README.md  __init__.py  body_data_entries.py  body_detail_window.py  body_encyclopedia.py  star_catalog_window.py  voice_reader.py
tests/: test_enhanced_tools.py.bak.20260624
tools/: clean_package.py  pack_build.py
源码全书/: README.md  gen_book.py.md  test_sync_30_tables.py.md  verify_both.py.md
项目全书/: .book_index_cache.json  README.md  回滚管控策略.md  模块优化摸底报告.md  模块状态总表.md  版本功能地图.md  终章.md  缘起与世界观.md  附录A_数据库表结构参考.md  附录B_打包与分发.md  附录C_代码规范与约定.md  附录D_常见调试命令.md
(+2363 files in other folders)
